[package]
name = "microasync-util"
version = "0.1.6"
edition = "2021"
repository = "https://github.com/tudbut/microasync-util"
license = "MIT"
description = "Utilities for the very small async runner"
categories = ["no-std", "embedded"]

[dependencies]
microasync = "0.4"

[features]
no_std = ["microasync/no_std"]
