[package]
name = "microasync-rt"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/tudbut/microasync-rt"
license = "MIT"
description = "A runtime for the very small async runner"
categories = ["no-std", "embedded"]

[dependencies]
microasync = "0.4"
async-core = { path = "../async-core", version = "0.3" }

[features]
no_std = ["microasync/no_std", "async-core/no_std"]
